--- a/post/templates/post.html
+++ b/post/templates/post.html
@@ -44,7 +44,8 @@
 </tr><tr>
 <br />
 <br />
-<input type="file" name="תמונה" accept="image/*" >
+<td>תמונה:</td>
+<input type="file" name="animal_image" accept="image/*" >
 <br />
 <br />
     <div class="form-actions">
