--- a/post/templates/post.html
+++ b/post/templates/post.html
@@ -48,6 +48,7 @@
 <input type="file" name="animal_image" accept="image/*" >
 <br />
 <br />
+{{form.captcha}}
     <div class="form-actions">
       <button id="send" type="submit">submit!</button>
     </div>
