--- a/post/templates/post.html
+++ b/post/templates/post.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 </head>
-<h1>Post a Lost/Found Pet</h1>
+<h1>פרסם דיווח</h1>
 <form method="post" enctype="multipart/form-data">
     {% csrf_token %}
 	<td>תאריך:</td>
