add options for pets and status

--- a/post/templates/post.html
+++ b/post/templates/post.html
@@ -25,12 +25,21 @@
 <br />
 <br />
 <td>סוג החיה:</td>
-    <td><input type="text" name="animal_type" required /></td>
+<select name="animal_type">
+    <option value="כלב">כלב</option>
+    <option value="חתול">חתול</option>
+    <option value="תוכי">תוכי</option>
+    <option value="ארנב">ארנב</option>
+	<option value="אחר">אחר</option>
+  </select>
 </tr><tr>
 <br />
 <br />
 <td>סטטוס:</td>
-    <td><input type="text" name="animal_status" required /></td>
+<select name="animal_status">
+    <option value="אבד">אבד</option>
+    <option value="נמצא">נמצא</option>
+  </select>
 </tr><tr>
 <br />
 <br />
