--- a/post/templates/all.html
+++ b/post/templates/all.html
@@ -155,10 +155,11 @@ figure img{width:300px;}
     </script>
    <form method="post" enctype="multipart/form-data">
         {% csrf_token %}
-    <br>
-    {% if pets_list %}
-        <ul>
-                {% for pet in pets_list %}
+    <br>       
+
+  {% if pets_list %}
+ <ul>    
+ {% for pet in pets_list %}
 
       <div class="container cta-100 ">
         <div class="container">
@@ -169,15 +170,45 @@ figure img{width:300px;}
                   <li data-target="#blogCarousel" data-slide-to="0" class="active"></li>
                   <li data-target="#blogCarousel" data-slide-to="1"></li>
                 </ol>
-               
+
+
                 <div class="carousel-inner">
                   <div class="carousel-item active">
                     <div class="row">
+
                       <div class="col-md-4" >
                         <div class="item-box-blog">
                           <div class="item-box-blog-image">
+                            <div class="item-box-blog-date bg-blue-ui white"> <span class="Date"> <p> {{ pet.pub_date }}</p></span> </div>  <br>
+			  	    <img src="{{ pet.animal_image.url }}"> </div>
+                          <div class="item-box-blog-body">
+                            <div class="item-box-blog-heading">
+                              <a href="#" tabindex="0">
+                                <h5>{{ pet.pub_name }}</h5>
+                              </a>
+                            </div>
+                            
+                            <div class="item-box-blog-data" style="padding: px 15px;">
+                              <p><i class="fa fa-user-o"></i><p> {{ pet.pub_phone }}</p> 
+                            </div>
+                            <div class="item-box-blog-text">
+                             		<td>סוג החיה: {{ pet.animal_type }}</td>
+		                            <br>
+	                            	<td>מיקום: {{ pet.animal_location }}</td>
+	                            	<br>
+	                            	<td>פרטים נוספים: {{ pet.animal_freetext }}</td>
 
-                            <div class="item-box-blog-date bg-blue-ui white"> <span class="Date"> <p> {{ pet.pub_date }}</p></span> </div>    <br>
+                            </div>
+                            <div class="mt"> <a href="#" tabindex="0" class="btn bg-blue-ui white read">יצירת קשר</a> </div>
+                          </div>
+                        </div>
+                      </div>
+
+                      <div class="col-md-4" >
+                        <div class="item-box-blog">
+                          <div class="item-box-blog-image">
+                          
+                            <div class="item-box-blog-date bg-blue-ui white"> <span class="Date"> <p> {{ pet.pub_date }}</p></span> </div> <br>
                               <img src="{{ pet.animal_image.url }}">
                           </div>
                           <div class="item-box-blog-body">
@@ -186,11 +217,9 @@ figure img{width:300px;}
                                 <h5>{{ pet.pub_name }}</h5>
                               </a>
                             </div>
-                            <!--Data-->
                             <div class="item-box-blog-data" style="padding: px 15px;">
                               <p><i class="fa fa-user-o"></i><p> {{ pet.pub_phone }}</p> 
                             </div>
-                            <!--Text-->
                             <div class="item-box-blog-text">
                              		<td>סוג החיה: {{ pet.animal_type }}</td>
 		                            <br>
@@ -206,7 +235,7 @@ figure img{width:300px;}
                       <div class="col-md-4" >
                         <div class="item-box-blog">
                           <div class="item-box-blog-image">
-                             <div class="item-box-blog-date bg-blue-ui white"> <span class="Date"> <p> {{ pet.pub_date }}</p></span> </div>    <br>
+                            <div class="item-box-blog-date bg-blue-ui white"> <span > <p> {{ pet.pub_date }}</p></span> </div> <br>
                               <img src="{{ pet.animal_image.url }}">
                           </div>
                           <div class="item-box-blog-body">
@@ -215,12 +244,10 @@ figure img{width:300px;}
                                 <h5>{{ pet.pub_name }}</h5>
                               </a>
                             </div>
-                            <!--Data-->
                             <div class="item-box-blog-data" style="padding: px 15px;">
-                              <p><i class="fa fa-user-o"></i><p> {{ pet.pub_phone }}</p> 
+                              <p><i class="fa fa-user-o"></i> <p> {{ pet.pub_phone }}</p> 
                             </div>
-                            <!--Text-->
-                            <div class="item-box-blog-text">
+                           <div class="item-box-blog-text">
                              		<td>סוג החיה: {{ pet.animal_type }}</td>
 		                            <br>
 	                            	<td>מיקום: {{ pet.animal_location }}</td>
@@ -228,146 +255,36 @@ figure img{width:300px;}
 	                            	<td>פרטים נוספים: {{ pet.animal_freetext }}</td>
 
                             </div>
-                            <div class="mt"> <a href="#" tabindex="0" class="btn bg-blue-ui white read">יצירת קשר</a> </div>
-                          </div>
-                        </div>
-                      </div>
-                      <div class="col-md-4" >
-                        <div class="item-box-blog">
-                          <div class="item-box-blog-image">
-                            <div class="item-box-blog-date bg-blue-ui white"> <span class="Date"> <p> {{ pet.pub_date }}</p></span> </div>    <br>
-                              <img src="{{ pet.animal_image.url }}">
-                          </div>
-                          <div class="item-box-blog-body">
-                            <div class="item-box-blog-heading">
-                              <a href="#" tabindex="0">
-                                <h5>{{ pet.pub_name }}</h5>
-                              </a>
-                            </div>
-                            <!--Data-->
-                            <div class="item-box-blog-data" style="padding: px 15px;">
-                              <p><i class="fa fa-user-o"></i><p> {{ pet.pub_phone }}</p> 
-                            </div>
-                            <!--Text-->
-                            <div class="item-box-blog-text">
-                             		<td>סוג החיה: {{ pet.animal_type }}</td>
-		                            <br>
-	                            	<td>מיקום: {{ pet.animal_location }}</td>
-	                            	<br>
-	                            	<td>פרטים נוספים: {{ pet.animal_freetext }}</td>
+                          
+                           <div class="mt"> <a href="#" tabindex="0" class="btn bg-blue-ui white read">יצירת קשר</a> </div>
+                                                       
 
-                            </div>
-                            <div class="mt"> <a href="#" tabindex="0" class="btn bg-blue-ui white read">יצירת קשר</a> </div>
                           </div>
                         </div>
                       </div>
                     </div>
-                    <!--.row-->
                   </div>
-                  <!--.item-->
-                  <div class="carousel-item ">
-                    <div class="row">
-                      <div class="col-md-4" >
-                        <div class="item-box-blog">
-                          <div class="item-box-blog-image">
-                            <!--Date-->
-                            <div class="item-box-blog-date bg-blue-ui white"> <span class="mon">Augu 01</span> </div>
-                            <!--Image-->
-                            <figure> <img alt="" src="https://cdn.pixabay.com/photo/2017/02/08/14/25/computer-2048983_960_720.jpg"> </figure>
-                          </div>
-                          <div class="item-box-blog-body">
-                            <!--Heading-->
-                            <div class="item-box-blog-heading">
-                              <a href="#" tabindex="0">
-                                <h5>News Title</h5>
-                              </a>
-                            </div>
-                            <!--Data-->
-                            <div class="item-box-blog-data" style="padding: px 15px;">
-                              <p><i class="fa fa-user-o"></i> Admin, <i class="fa fa-comments-o"></i> Comments(3)</p>
-                            </div>
-                            <!--Text-->
-                            <div class="item-box-blog-text">
-                              <p>Lorem ipsum dolor sit amet, adipiscing. Lorem ipsum dolor sit amet, consectetuer adipiscing. Lorem ipsum dolor sit amet, adipiscing. Lorem ipsum dolor sit amet, adipiscing. Lorem ipsum dolor sit amet, consectetuer adipiscing. Lorem ipsum dolor.</p>
-                            </div>
-                            <div class="mt"> <a href="#" tabindex="0" class="btn bg-blue-ui white read">read more</a> </div>
-                            <!--Read More Button-->
-                          </div>
-                        </div>
-                      </div>
-                      <div class="col-md-4" >
-                        <div class="item-box-blog">
-                          <div class="item-box-blog-image">
-                            <!--Date-->
-                            <div class="item-box-blog-date bg-blue-ui white"> <span class="mon">Augu 01</span> </div>
-                            <!--Image-->
-                            <figure> <img alt="" src="https://cdn.pixabay.com/photo/2017/02/08/14/25/computer-2048983_960_720.jpg"> </figure>
-                          </div>
-                          <div class="item-box-blog-body">
-                            <!--Heading-->
-                            <div class="item-box-blog-heading">
-                              <a href="#" tabindex="0">
-                                <h5>News Title</h5>
-                              </a>
-                            </div>
-                            <!--Data-->
-                            <div class="item-box-blog-data" style="padding: px 15px;">
-                              <p><i class="fa fa-user-o"></i> Admin, <i class="fa fa-comments-o"></i> Comments(3)</p>
-                            </div>
-                            <!--Text-->
-                            <div class="item-box-blog-text">
-                              <p>Lorem ipsum dolor sit amet, adipiscing. Lorem ipsum dolor sit amet, consectetuer adipiscing. Lorem ipsum dolor sit amet, adipiscing. Lorem ipsum dolor sit amet, adipiscing. Lorem ipsum dolor sit amet, consectetuer adipiscing. Lorem ipsum dolor.</p>
-                            </div>
-                            <div class="mt"> <a href="#" tabindex="0" class="btn bg-blue-ui white read">read more</a> </div>
-                            <!--Read More Button-->
-                          </div>
-                        </div>
-                      </div>
-                      <div class="col-md-4" >
-                        <div class="item-box-blog">
-                          <div class="item-box-blog-image">
-                            <!--Date-->
-                            <div class="item-box-blog-date bg-blue-ui white"> <span class="mon">Augu 01</span> </div>
-                            <!--Image-->
-                            <figure> <img alt="" src="https://cdn.pixabay.com/photo/2017/02/08/14/25/computer-2048983_960_720.jpg"> </figure>
-                          </div>
-                          <div class="item-box-blog-body">
-                            <!--Heading-->
-                            <div class="item-box-blog-heading">
-                              <a href="#" tabindex="0">
-                                <h5>News Title</h5>
-                              </a>
-                            </div>
-                            <!--Data-->
-                            <div class="item-box-blog-data" style="padding: px 15px;">
-                              <p><i class="fa fa-user-o"></i> Admin, <i class="fa fa-comments-o"></i> Comments(3)</p>
-                            </div>
-                            <!--Text-->
-                            <div class="item-box-blog-text">
-                              <p>Lorem ipsum dolor sit amet, adipiscing. Lorem ipsum dolor sit amet, consectetuer adipiscing. Lorem ipsum dolor sit amet, adipiscing. Lorem ipsum dolor sit amet, adipiscing. Lorem ipsum dolor sit amet, consectetuer adipiscing. Lorem ipsum dolor.</p>
-                            </div>
-                             <div class="mt"> <a href="#" tabindex="0" class="btn bg-blue-ui white read">read more</a> </div>
-                            <!--Read More Button-->
-                          </div>
+                
+
+              
+   
                         </div>
                       </div>
                     </div>
-                    <!--.row-->
                   </div>
-                  <!--.item-->
                 </div>
-                <!--.carousel-inner-->
               </div>
-              <!--.Carousel-->
             </div>
           </div>
         </div>
       </div>
-        {% endfor %}
-        </ul>
+    </ul>
+
+       {% endfor %}
     {% else %}
         <p>אין דיווחים זמינים.</p>
     {% endif %}
-       </form>
+    </form>
+
     </body>
     </html>
