--- a/post/templates/post.html
+++ b/post/templates/post.html
@@ -1,9 +1,79 @@
 <html dir="rtl">
 <head>
+<link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 </head>
-<h1>פרסם דיווח</h1>
+<style>
+body{
+    background: -webkit-linear-gradient(left, #0072ff, #00c6ff);
+}
+.contact-form{
+    background: #fff;
+    margin-top: 10%;
+    margin-bottom: 5%;
+    width: 70%;
+}
+.contact-form .form-control{
+    border-radius:1rem;
+}
+div.c {
+  text-align: right;
+} 
+.contact-image{
+    text-align: right;
+}
+.contact-image img{
+    border-radius: 6rem;
+    width: 11%;
+    margin-top: -3%;
+    transform: rotate(29deg);
+}
+.contact-form form{
+    padding: 14%;
+}
+.contact-form form .row{
+    margin-bottom: -7%;
+}
+.contact-form h3{
+    margin-bottom: 8%;
+    margin-top: -10%;
+    text-align: center;
+    color: #0062cc;
+}
+.contact-form .btnContact {
+    width: 50%;
+    border: none;
+    border-radius: 1rem;
+    padding: 1.5%;
+    background: #dc3545;
+    font-weight: 600;
+    color: #fff;
+    cursor: pointer;
+}
+.btnContactSubmit
+{
+    width: 50%;
+    border-radius: 1rem;
+    padding: 1.5%;
+    color: #fff;
+    background-color: #0062cc;
+    border: none;
+    cursor: pointer;
+}
+</style>
+
+
+
+<div class="container contact-form">
+            <div class="contact-image">
+
+            </div>
+            <form method="post">
+                <h3>פרסם דיווח</h3>
 <form method="post" enctype="multipart/form-data">
     {% csrf_token %}
+<div class="c">
 	<td>תאריך:</td>
     <td><input type="datetime-local" name="pub_date" required /></td>
 </tr><tr>
@@ -58,9 +128,15 @@
 <br />
 <br />
 {{form.captcha}}
+<br />
+
+<br />
+
     <div class="form-actions">
-      <button id="send" type="submit">submit!</button>
+      <button id="send" type="submit">פרסם</button>
     </div>
+    </div>
+
 </form>
 </body>
 </html>
