--- a/post/templates/all.html
+++ b/post/templates/all.html
@@ -199,7 +199,7 @@ figure img{width:300px;}
 	                            	<td>פרטים נוספים: {{ pet.animal_freetext }}</td>
 
                             </div>
-                            <div class="mt"> <a href="#" tabindex="0" class="btn bg-blue-ui white read">יצירת קשר</a> </div>
+                            <div class="mt"> <a href="com/{{ pet.id }}" tabindex="0" class="btn bg-blue-ui white read">יצירת קשר</a> </div>
                           </div>
                         </div>
                       </div>
@@ -228,7 +228,7 @@ figure img{width:300px;}
 	                            	<td>פרטים נוספים: {{ pet.animal_freetext }}</td>
 
                             </div>
-                            <div class="mt"> <a href="#" tabindex="0" class="btn bg-blue-ui white read">יצירת קשר</a> </div>
+                            <div class="mt"> <a href="com/{{ pet.id }}" tabindex="0" class="btn bg-blue-ui white read">יצירת קשר</a> </div>
                           </div>
                         </div>
                       </div>
@@ -256,7 +256,14 @@ figure img{width:300px;}
 
                             </div>
                           
-                           <div class="mt"> <a href="#" tabindex="0" class="btn bg-blue-ui white read">יצירת קשר</a> </div>
+                           <div class="mt"> <a href="com/{{ pet.id }}" tabindex="0" class="btn bg-blue-ui white read">יצירת קשר</a> </div>
+						   
+						   
+						   
+						 
+
+
+
                                                        
 
                           </div>
