--- a/post/templates/post.html
+++ b/post/templates/post.html
@@ -3,8 +3,63 @@
 <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+<script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
+<script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
 </head>
+
 <style>
+.blogShort{ border-bottom:1px solid white;}
+.add{background: #333; padding: 10%; height: 300px;}
+
+.nav-sidebar { 
+    width: 100%;
+    padding: 8px 0; 
+    border-right: 1px solid white;
+}
+.nav-sidebar a {
+    color: #333;
+    -webkit-transition: all 0.08s linear;
+    -moz-transition: all 0.08s linear;
+    -o-transition: all 0.08s linear;
+    transition: all 0.08s linear;
+}
+.nav-sidebar .active a { 
+    cursor: default;
+    background-color: white; 
+    color: #0072ff; 
+}
+.nav-sidebar .active a:hover {
+    background-color: #37D980;   
+}
+.nav-sidebar .text-overflow a,
+.nav-sidebar .text-overflow .media-body {
+    white-space: nowrap;
+    overflow: hidden;
+    -o-text-overflow: ellipsis;
+    text-overflow: ellipsis; 
+}
+
+.btn-blog {
+    color: #ffffff;
+    background-color: #37d980;
+    border-color: #37d980;
+    border-radius:0;
+    margin-bottom:10px
+}
+.btn-blog:hover,
+.btn-blog:focus,
+.btn-blog:active,
+.btn-blog.active,
+.open .dropdown-toggle.btn-blog {
+    color: white;
+    background-color:#34ca78;
+    border-color: #34ca78;
+}h1{
+     color:#34ca78;
+    font-family: 'Lobster', cursive;
+}
+
 body{
     background: -webkit-linear-gradient(left, #0072ff, #00c6ff);
 }
@@ -41,6 +96,12 @@ div.c {
     text-align: center;
     color: #0062cc;
 }
+ .contact-form h1{
+    margin-bottom: 15%;
+    margin-top: -30%;
+    text-align: center;
+    color: white;
+}
 .contact-form .btnContact {
     width: 50%;
     border: none;
@@ -63,14 +124,21 @@ div.c {
 }
 </style>
 
-
+    <div class="col-sm-2 paddingTop20">
+            <nav class="nav-sidebar">
+                <ul class="nav">
+                    <li class="active"> <a href="http://127.0.0.1:8000/home/"> <span class="glyphicon glyphicon-star"></span> דף הבית</a></li>
+                    <li class="nav-divider"></li>
+                </ul>
+            </nav>
+    </div>
 
 <div class="container contact-form">
             <div class="contact-image">
 
             </div>
             <form method="post">
-                <h3>פרסם דיווח</h3>
+                <h1>פרסם דיווח</h1>
 <form method="post" enctype="multipart/form-data">
     {% csrf_token %}
 <div class="c">
