PetLost->LostPet & add button to contact with lost

--- a/post/templates/all.html
+++ b/post/templates/all.html
@@ -27,7 +27,8 @@
             <span class="position-absolute tm-new-badge">New</span>
             <h2 class="tm-pt-30 tm-color-primary tm-post-title">{{ pet.pub_name }}</h2>
         </a>                    
-        <p class="tm-pt-30">{{ pet.animal_freetext }}<br>{{ pet.animal_location }}</p>
+        <p class="tm-pt-30">{{ pet.animal_freetext }}<br>{{ pet.animal_location }}<br>
+            <a class="mt"> <a href="com/{{ pet.id }}" tabindex="0" class="btn bg-blue-ui white read">יצירת קשר</a></p>
         <div class="d-flex justify-content-between tm-pt-45">
             <span class="tm-color-primary">{{ pet.animal_type }}</span>
             <span class="tm-color-primary">{{ pet.pub_date }}</span>
