--- a/post/templates/base.html
+++ b/post/templates/base.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	{% block title %}<title></title>{% endblock title %}
+	{% block title %}<title>LostPet</title>{% endblock title %}
     {% load static %}
     <link href= {% static 'post/fontawesome/css/all.min.css' %} rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap" rel="stylesheet"> <!-- https://fonts.google.com/ -->
@@ -19,7 +19,7 @@
             </button> {% endcomment %}
             <div class="tm-site-header">
                 {% comment %} <img src="{% static 'post/logo.png' %}"  width="60" height="60">          {% endcomment %}
-                <h1 class="text-center">PetLost</h1>
+                <h1 class="text-center">LostPet</h1>
             </div>
             <nav class="tm-nav" id="tm-nav">            
                 <ul>
