--- a/post/templates/com.html
+++ b/post/templates/com.html
@@ -1,89 +1,6 @@
-<html dir="rtl">
-<head>
-<link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-<script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
-<script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
-</head>
-<style>
-body{
-    background: -webkit-linear-gradient(left, #0072ff, #00c6ff);
-}
-.nav-sidebar .active a { 
-    cursor: default;
-    background-color: white; 
-    color: #0072ff; 
-}
-.nav-sidebar .active a:hover {
-    background-color: #37D980;   
-}
-.contact-form{
-    background: #fff;
-    margin-top: 10%;
-    margin-bottom: 5%;
-    width: 70%;
-}
-.contact-form .form-control{
-    border-radius:1rem;
-}
-div.c {
-  text-align: right;
-} 
-.contact-image{
-    text-align: right;
-}
-.contact-image img{
-    border-radius: 6rem;
-    width: 11%;
-    margin-top: -3%;
-    transform: rotate(29deg);
-}
-.contact-form form{
-    padding: 14%;
-}
-.contact-form form .row{
-    margin-bottom: -7%;
-}
-.contact-form h3{
-    margin-bottom: 8%;
-    margin-top: -10%;
-    text-align: center;
-    color: #0062cc;
-}
-.contact-form .btnContact {
-    width: 50%;
-    border: none;
-    border-radius: 1rem;
-    padding: 1.5%;
-    background: #dc3545;
-    font-weight: 600;
-    color: #fff;
-    cursor: pointer;
-}
-.btnContactSubmit
-{
-    width: 50%;
-    border-radius: 1rem;
-    padding: 1.5%;
-    color: #fff;
-    background-color: #0062cc;
-    border: none;
-    cursor: pointer;
-}
-</style>
-<body>
-
-  <div class="col-sm-2 paddingTop20">
-            <nav class="nav-sidebar">
-                <ul class="nav">
-                    <li class="active"> <a href="http://127.0.0.1:8000/home/"> <span class="glyphicon glyphicon-star"></span> דף הבית</a></li>
-                    <li class="nav-divider"></li>
-                </ul>
-            </nav>
-    </div>
-
+{% extends "base.html" %}
+{% block title %}<title>דף לא נמצא</title>{% endblock title %}
+{% block containerCenter %}
 <div class="container contact-form">
             <div class="contact-image">
 
@@ -130,6 +47,4 @@ div.c {
     </div>
     </div>
 
-</form>
-</body>
-</html>
+{% endblock %}
