finish update html

--- a/post/templates/com.html
+++ b/post/templates/com.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %}<title>דף לא נמצא</title>{% endblock title %}
+{% block title %}<title>LostPet</title>{% endblock title %}
 {% block containerCenter %}
 <div class="container contact-form">
             <div class="contact-image">
